examples/test/testpolicy4532.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4532
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key22: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value33
          key13: value10
      podSelector:
        matchLabels:
          key14: value11
          key35: value29
          key3: value12
